[project]
name = "enhancer-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "jax>=0.10,<0.11",
    "flax>=0.12,<0.13",
    "optax>=0.2.4",
    "orbax-checkpoint>=0.11",
    "diffrax>=0.7",
    "jaxtyping>=0.2.36",
    "einops>=0.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "omegaconf>=2.3",
    "hydra-core>=1.3",
]

[project.optional-dependencies]
gpu = ["jax[cuda12]>=0.10,<0.11"]
log = ["wandb>=0.17"]
plot = ["matplotlib>=3.7"]
data = ["grain>=0.2.0"]
# Motif analysis (eval phase). pyjaspar fetches JASPAR matrices; FIMO comes from
# the MEME suite and is installed OUTSIDE pip (see README).
motif = ["pyjaspar>=3.0", "logomaker>=0.8", "biopython>=1.83"]
dev = ["pytest>=8.0", "pytest-xdist>=3.5", "ruff>=0.6", "ipython>=8.0"]
